--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -1,6 +1,9 @@
 // import Roboto font
 @import url("//fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:300,400,700");
 
+// import Dosis font
+@import url("//fonts.googleapis.com/css?family=Dosis");
+
 // setup variables
 @import "variables";
 
