Update info color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -44,7 +44,7 @@ $brand-success-dark:        #88b632 !default;
 $brand-success-light:       #a8d15b !default;
 $brand-success-lighter:     #cbe49d !default;
 
-$brand-info:                #3498db !default;
+$brand-info:                #73B3D0 !default;
 $brand-info-dark:           #2487c9 !default;
 $brand-info-light:          #51a7e0 !default;
 $brand-info-lighter:        #99cbed !default;
