hover sidebar product seletion color

--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -90,7 +90,7 @@
 
                 &:hover {
                     background: $nav-sidebar-brand-bg-color;
-                    color: $nav-sidebar-link-hover-color;
+                    color: #f4f4f4;
                 }
             }
 
