--- a/src/lnc-styles/lnc-bootstrap.scss
+++ b/src/lnc-styles/lnc-bootstrap.scss
@@ -1,4 +1,7 @@
 
+// define style's prefix
+$style-prefix: "lnc-";
+
 // import FontAwesome icons
 $fa-font-path: "../../vendor/font-awesome/fonts";
 @import "../../vendor/font-awesome/scss/font-awesome.scss";
