Fix prefix to input-search in item-search-list.scss

--- a/src/lnc-styles/_item-search-list.scss
+++ b/src/lnc-styles/_item-search-list.scss
@@ -42,7 +42,7 @@ $item-search-list-items-distance: 14px;
         cursor: pointer;
     }
 
-    .input-search {
+    .#{$style-prefix}input-search {
         margin-bottom: $item-search-list-padding;
     }
 }
