Change .input-search name class to .input-item

--- a/src/lnc-styles/_item-search-list.scss
+++ b/src/lnc-styles/_item-search-list.scss
@@ -40,7 +40,7 @@ $item-search-list-items-distance: 14px;
         }
     }
 
-    .#{$style-prefix}input-search {
+    .#{$style-prefix}input-item {
         margin-bottom: $item-search-list-padding;
     }
 }
