--- a/src/lnc-styles/_forms.scss
+++ b/src/lnc-styles/_forms.scss
@@ -5,14 +5,16 @@
         display: block;
         position: absolute;
         top: 7px;
-        right: 10px;
+        right: 11px;
+        height: 19px;
+        width: 19px;
         text-align: center;
 
         // properties copied from classes .fa-spin and .fa-spinner of
         // FontAwesome
-        content: "\f110";
+        content: "\f1ce";
         font-family: FontAwesome;
-        animation: fa-spin 1.3s infinite linear;
+        animation: fa-spin 2.2s infinite linear;
     }
 }
 
