Apply margin in error icon

--- a/src/lnc-styles/_forms.scss
+++ b/src/lnc-styles/_forms.scss
@@ -39,6 +39,7 @@
         // content copied from class .fa-exclamation-triangle of FontAwesome
         content: "\f071";
         font-family: FontAwesome;
+        margin-right: 5px;
     }
 }
 
