--- a/src/lnc-styles/lnc-bootstrap.scss
+++ b/src/lnc-styles/lnc-bootstrap.scss
@@ -6,6 +6,7 @@ $style-prefix: "lnc-";
 @import "variables";
 
 // import partials
+@import "buttons";
 @import "forms";
 @import "input";
 @import "input-search";
