--- a/src/lnc-styles/_item-search-list.scss
+++ b/src/lnc-styles/_item-search-list.scss
@@ -7,12 +7,15 @@ $item-search-list-items-distance: 14px;
 
 .#{$style-prefix}item-search-list {
 
+    width: 618px;
+
     .item-list {
+        background: #F4F4F4;
+        box-shadow: 1px 2px 0 0 rgba(0,0,0,0.13);
         display: flex;
         justify-content: space-between;
-        background: #F4F4F4;
-        padding: 0;
         margin-bottom: 22px;
+        padding: 0;
 
         .item-container {
             padding: 20px 23px;
